# CodexSwitch

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Package.swift  README.md
CodexNativeTests/: AppServerManagerTests.swift
crates/codexswitch-cli/: Cargo.toml  build.rs
crates/codexswitch-cli/src/: account_store.rs  activation.rs  auth.rs  bounded_command.rs  codex_health.rs  codex_update.rs  daemon.rs  hermes.rs  import.rs  main.rs  patched_codex.rs  quota.rs  rate_limit_resets.rs  readiness.rs  reload.rs  secure_drop.rs  secure_file.rs  token_refresh.rs  tui.rs
crates/codexswitch-cli/src/codex_update/: generated_systemd.rs  macos_activation.rs  preparation.rs  retention.rs  runtime_discovery.rs  source_app_server_patching.rs  source_app_server_template.rs  source_auth_patching.rs  source_cargo_patching.rs  source_checkout.rs  source_patch_helpers.rs  source_patching.rs  source_turn_control.rs  source_turn_template.rs  source_websocket_patching.rs  state.rs  tests.rs  transaction.rs
crates/codexswitch-cli/src/import/: bounds.rs  crypto.rs  envelope.rs  payload.rs  payload_details.rs  secure_input.rs  tests.rs
crates/codexswitch-cli/systemd/: codexswitch.service  signul-codex-app-server.service
crates/codexswitch-cli/systemd/codexswitch.service.d/: 10-maintenance-resources.conf
crates/codexswitch-cli/systemd/signul-codex-app-server.service.d/: 10-runtime-resources.conf
crates/codexswitch-cli/tests/: secure_drop_cli.rs
docs/: README.md  codexswitch-banked-resets.md  codexswitch-quota-priming.md  linux-cli-only.md  sighup-safety.md  (+1 more)
(+262 files in other folders)
